Ajout de la question 7

--- a/tp2/vues/pied.html
+++ b/tp2/vues/pied.html
@@ -8,7 +8,7 @@ and open the template in the editor.
             <ul>
                 <li><a id="nav_offres_arrive" href="index.php?action=gereroffresarriveeentreprise" rel="external">Offres arrivée</a></li>
                 <li><a id="nav_offres_depart" href="index.php?action=gereroffresdepartentreprise" rel="external" >Offres départ</a></li>
-                <li><a id="nav_mes_offres">Mes offres</a></li>
+                <li><a id="nav_mes_offres" href="index.php?action=gerermesoffres" rel="external" >Mes offres</a></li>
             </ul>
           </div>
         </div><!-- /footer -->
